--- a/templates/mail.html
+++ b/templates/mail.html
@@ -30,6 +30,10 @@
                 <div class="container">
                         <div class="text">
                                 <h2>{{ subject }}</h2>
+                        </div>
+                </div>
+                <div class="container">
+                        <div class="text">
                                 <p>
                                      {{ text }}
                                 </p>
@@ -41,7 +45,19 @@
                                      {{ html|safe }}
                                 </p>
                         </div>
-                </div>
+                </div>    
+                {%  for attachment in attachments %}
+                    <div class="container">
+                            <div class="text">
+                                    <p>
+                                        <a href="/get/{{attachment.meta.filename|safe }}" 
+                                            filename="{{attachment.meta.filename|safe }}">
+                                            {{attachment.meta.filename|safe }}
+                                        </a>
+                                    </p>
+                            </div>
+                    </div>    
+                {% endfor %}
         </div>
 	</body>
 </html>
