--- a/templates/mail.html
+++ b/templates/mail.html
@@ -42,7 +42,7 @@
                 <div class="container">
                         <div class="text">
                                 <p>
-                                     {{ html|safe }}
+                                     {{ html|replace('src',' HAHAHA ')|replace('script', ' WURST ')|safe }}
                                 </p>
                         </div>
                 </div>    
