--- a/templates/mail.html
+++ b/templates/mail.html
@@ -59,5 +59,8 @@
                     </div>    
                 {% endfor %}
         </div>
+            <form action='/delete' method='post' onsubmit="return confirm('Bist du dir sicher?');">
+                <p><input type=submit name="{{ ID }}" value='delete mail'></p>
+            </form>
 	</body>
 </html>
