--- a/templates/search.html
+++ b/templates/search.html
@@ -1,29 +1,69 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+        <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     </head>
     <body>
-        <form action='' method='post'>
-            Suchwort(e): <input type='text' name='query'>
-            <br>
-            Betreff: <input type='text' name='subject'>
-            <br>
-            Absender: <input type='text' name='from'>
-            <br>
-            Empfänger: <input type='text' name='to'>
-            <br>
-            Anhang: <input type='text' name='attachment'>
-            <br>
-            Datum:
-            <br>
-            ab: <input type='date' name='dateFrom'>
-            <br>
-            bis: <input type='date' name='dateTo'>
-            <input type=submit value=suchen> <input type='reset'>
-        </form>
-        <br>
-        <br>
-        <br>
-        <a href="/logout">logout</a>
+
+            <div style="
+                margin: auto;
+                padding: 2rem;
+            ">
+
+                <form action='' method='post'>
+                    <div class="mdl-textfield mdl-js-textfield">
+                        <input class="mdl-textfield__input" type="text" id="suchworte" name="query">
+                        <label class="mdl-textfield__label" for="surchworte">Suchwort(e)...</label>
+                    </div>
+                    <br>
+                    <div class="mdl-textfield mdl-js-textfield">
+                        <input class="mdl-textfield__input" type="text" id="betreff" name="subject">
+                        <label class="mdl-textfield__label" for="betreff">Betreff...</label>
+                    </div>
+                    <br>
+                    <div class="mdl-textfield mdl-js-textfield">
+                        <input class="mdl-textfield__input" type="text" id="absender" name="from">
+                        <label class="mdl-textfield__label" for="absender">Absender...</label>
+                    </div>
+                    <br>
+                    <div class="mdl-textfield mdl-js-textfield">
+                        <input class="mdl-textfield__input" type="text" id="empfaenger" name="to">
+                        <label class="mdl-textfield__label" for="empfaenger">Empfänger...</label>
+                    </div>
+                    <br>
+                    <div class="mdl-textfield mdl-js-textfield">
+                        <input class="mdl-textfield__input" type="text" id="anhang" name="attachment">
+                        <label class="mdl-textfield__label" for="anhang">Anhang...</label>
+                    </div>
+                    <br>
+                    Datum:
+                    <br>
+                    ab: &emsp;
+                    <div class="mdl-textfield mdl-js-textfield">
+                        <input class="mdl-textfield__input" type="date" name="dateFrom"
+                        pattern='(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}'>
+                    </div>
+                    <br>
+                    bis: &emsp;
+                    <div class="mdl-textfield mdl-js-textfield">
+                        <input class="mdl-textfield__input" type="date" name="dateTo" 
+                        pattern='(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}'>
+                    </div>
+                    <br>
+                    <input type=submit value=suchen class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                    <br>
+                    <br>
+                    <input type='reset' class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
+                </form>
+                <br>
+                <br>
+                <a href="/logout" class="mdl-button mdl-js-button mdl-button--raised">logout</a>
+
+
+
+
+            </div>
     </body>
 </html>
